--- a/src/components/app-root/app-root.css
+++ b/src/components/app-root/app-root.css
@@ -1,15 +1,7 @@
-header {
-  background: #5851ff;
-  color: white;
-  height: 56px;
-  display: flex;
-  align-items: center;
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
-}
-
-h1 {
-  font-size: 1.4rem;
-  font-weight: 500;
-  color: #fff;
-  padding: 0 12px;
+main {
+  position: relative;
+  background-color: #f5f7fb;
+  min-height: calc(100vh - 56px);
+  height: 100%;
+  z-index: 0;
 }
