--- a/src/global/app.css
+++ b/src/global/app.css
@@ -1,16 +1,26 @@
-/*
-  Global App CSS
-  ----------------------
-  Use this file for styles that should be applied to all components.
-  For example, "font-family" within the "body" selector is a CSS property
-  most apps will want applied to all components.
-
-  Any global CSS variables should also be applied here.
-*/
-
+@import "variables.css";
 
 body {
-  margin: 0px;
-  padding: 0px;
-  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+  margin: 0;
+  padding: 0;
+  font-size: 16px;
+  line-height: 1.25;
+  font-family: var(--font-body);
+  height: 100%;
+  min-height: 100vh;
+}
+
+.hydrated {
+  display: block;
+}
+
+h1, h2 {
+  font-family: var(--font-display);
+  font-style: italic;
+  font-weight: 300;
+}
+
+a {
+  color: var(--color-accent);
+  text-decoration: none;
 }
