--- a/src/components/app-footer/app-footer.css
+++ b/src/components/app-footer/app-footer.css
@@ -47,3 +47,23 @@ a:hover {
 footer .separator {
   color: rgba(255, 255, 255, 0.5);
 }
+
+footer .icon-heart {
+  display: inline-block;
+  animation: heartbeat 3s ease-in-out infinite;
+}
+
+@keyframes heartbeat {
+  0%, 50%, 100% {
+    transform: scale(1);
+  }
+  5% {
+    transform: scale(1.125);
+  }
+  10% {
+    transform: scale(1.05);
+  }
+  15% {
+    transform: scale(1.25);
+  }
+}
