--- a/src/global/app.css
+++ b/src/global/app.css
@@ -14,6 +14,13 @@ body {
   display: block;
 }
 
+.page {
+    width: 100%;
+    max-width: 1080px;
+    margin: 0 auto;
+    padding: 64px 12px 128px;
+}
+
 h1, h2 {
   font-family: var(--font-display);
   font-style: italic;
