--- a/src/components/page-home/page-home.css
+++ b/src/components/page-home/page-home.css
@@ -101,6 +101,7 @@ section.cta {
   position: absolute;
   transform: translateY(0);
   transition: all 250ms cubic-bezier(0.23, 1, 0.320, 1);
+  color: var(--color-notify);
 }
 
 .prompt.copied .highlight {
