--- a/src/components/app-header/app-header.css
+++ b/src/components/app-header/app-header.css
@@ -6,6 +6,10 @@
   z-index: 1;
 }
 
+::selection {
+  background-color: var(--color-notify);
+}
+
 header {
   position: relative;
   background: white;
