--- a/src/global/app.css
+++ b/src/global/app.css
@@ -10,6 +10,10 @@ body {
   min-height: 100vh;
 }
 
+::selection {
+  background-color: var(--color-notify);
+}
+
 .hydrated {
   display: block;
 }
