--- a/src/components/page-docs/page-docs.css
+++ b/src/components/page-docs/page-docs.css
@@ -2,13 +2,21 @@
     display: grid;
 }
 
+.docs .icon {
+    width: 24px;
+    height: 24px;
+}
+.docs .icon path {
+    fill: currentColor;
+}
+
 .docs aside {
     position: absolute;
     width: 67vw;
     top: 0;
     bottom: 0;
     left: 0;
-    background-color: black;
+    background-color: #34383c;
     color: white;
     padding-top: 56px;
     transform: translateX(-67vw);
@@ -24,6 +32,10 @@
 }
 .menu-is-open .docs article {
     transform: translateX(67vw);
+}
+
+#menu-button {
+    margin-left: -12px;
 }
 
 @media (min-width: 640px) {
@@ -43,7 +55,7 @@
         transform: translateX(0);
         grid-column: 1;
         background-color: transparent;
-        color: black
+        color: black;
     }
 
     .docs article {
