--- a/src/components/page-home/page-home.css
+++ b/src/components/page-home/page-home.css
@@ -123,7 +123,7 @@ section.benefits .container {
   padding: 0 12px;
   display: grid;
   grid-template-rows: repeat(6, 1fr);
-  grid-auto-flow: column;
+  grid-auto-flow: row;
   grid-gap: 16px;
 }
 
@@ -138,6 +138,7 @@ section.benefits .container {
   section.benefits .container {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
+    grid-auto-flow: column;
   }
 }
 
@@ -183,36 +184,4 @@ section.next-steps .buttons stencil-route-link button {
   section.next-steps .buttons stencil-route-link button {
     width: auto;
   }
-}
-
-button {
-  background: var(--color-accent);
-  border: none;
-  border-radius: 4px;
-  color: white;
-
-  margin: 8px 12px;
-  font-size: 13px;
-  font-weight: 500;
-  padding: 12px 64px;
-  text-transform: uppercase;
-  outline: none;
-  letter-spacing: 0.04em;
-  transition: all .15s ease;
-  cursor: pointer;
-
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 3px 6px rgba(0,0,0,0.06);
-  transition: all 200ms cubic-bezier(0.215, 0.610, 0.355, 1);
-}
-
-button:hover {
-  background: var(--color-accent-light);
-  transform: translateY(-1px);
-  box-shadow: 0 2px 4px rgba(0,0,0,0.12), 0 4px 8px rgba(0,0,0,0.06);
-}
-
-button:active {
-  background: var(--color-accent-dark);
-  transform: translateY(1px);
-  box-shadow: 0 0 2px rgba(0,0,0,0.12), 0 1px 3px rgba(0,0,0,0.06);
 }
