--- a/src/global/app.css
+++ b/src/global/app.css
@@ -1,4 +1,5 @@
-@import "variables.css";
+@import "./variables.css";
+@import "./components/button.css";
 
 body {
   margin: 0;
@@ -25,10 +26,9 @@ body {
     padding: 64px 12px 128px;
 }
 
-h1, h2 {
+h1, h2, h3, h4, h5, h6 {
   font-family: var(--font-display);
-  font-style: italic;
-  font-weight: 300;
+  font-weight: 700;
 }
 
 a {
