feat(): update 404 page

--- a/src/global/app.css
+++ b/src/global/app.css
@@ -20,7 +20,7 @@ body {
 }
 
 .page {
-    width: 100%;
+    width: calc(100% - 24px);
     max-width: 1080px;
     margin: 0 auto;
     padding: 64px 12px 128px;
