--- a/src/components/page-notfound/page-notfound.css
+++ b/src/components/page-notfound/page-notfound.css
@@ -1,20 +1,29 @@
-.notfound {
+.page.notfound {
     text-align: center;
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    justify-content: center;
+    max-width: 100vw;
+    overflow: hidden;
 }
 
-.notfound h1,
-.notfound h3 {
+.notfound h2 {
+    font-size: 1.5em;
+    font-family: var(--font-body);
     font-style: normal;
     font-weight: normal;
     margin: 0;
 }
 
-.notfound h1 {
-    margin-top: 64px;
-    font-size: 3em;
-    color: rgba(0,0,0,0.54);
+.notfound img {
+    display: block;
+    width: 50vw;
+    max-width: 256px;
+    margin: 0 auto;
+    margin-top: 72px;
 }
 
-.notfound h3 {
-    font-size: 1.5em;
+.notfound stencil-route-link {
+    margin-top: 36px;
 }
