--- a/src/components/page-home/page-home.css
+++ b/src/components/page-home/page-home.css
@@ -3,10 +3,32 @@
 }
 
 section.hero {
+  position: relative;
   padding-top: 64px;
   padding-bottom: 64px;
 
   text-align: center;
+}
+
+section.hero img.forest {
+  position: absolute;
+  left: -64px;
+  right: -64px;
+  width: calc(100% + 128px);
+  top: -12px;
+  z-index: -1;
+}
+
+@media (min-width: 800px) {
+  section.hero img.forest {
+    top: -15vw;
+  }
+}
+
+@media (min-width: 1080px) {
+  section.hero img.forest {
+    opacity: 0.67;
+  }
 }
 
 page-home .logo {
@@ -30,7 +52,9 @@ page-home .logo {
 }
 
 section.cta {
-  margin-bottom: 64px;
+  margin: 0 -12px;
+  padding: 0 12px;
+  background: linear-gradient(to bottom, transparent, transparent 49%, white 50%, white);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -86,11 +110,15 @@ section.cta {
 .prompt .highlight {
   display: block;
   cursor: pointer;
-  padding: 0 6px;
-  margin-left: -6px;
+  padding: 6px;
+  margin: -6px;
+  margin-right: 0;
+  border-radius: 2px;
   transition: all 250ms cubic-bezier(0.23, 1, 0.320, 1);
 }
 
+.prompt .highlight:focus,
+.prompt .highlight:hover,
 .prompt .highlight:active {
   background-color: rgba(255, 255, 255, 0.25);
 }
@@ -114,13 +142,16 @@ section.cta {
 }
 
 section.benefits {
-  width: 100%;
-  max-width: 1080px;
-  margin: 0 auto;
+  margin: 0 -12px;
+  padding: 64px 12px;
+  background-color: white;
 }
 
 section.benefits .container {
+  margin: 0 auto;
   padding: 0 12px;
+  width: 100%;
+  max-width: 1080px;
   display: grid;
   grid-template-rows: repeat(6, 1fr);
   grid-auto-flow: row;
