--- a/src/components/page-home/page-home.css
+++ b/src/components/page-home/page-home.css
@@ -10,6 +10,10 @@ section.hero {
   text-align: center;
 }
 
+section.hero > div {
+  pointer-events: none;
+}
+
 section.hero img.forest {
   position: absolute;
   left: -64px;
@@ -17,6 +21,12 @@ section.hero img.forest {
   width: calc(100% + 128px);
   top: -12px;
   z-index: -1;
+  transform: translate(calc(var(--x) * -2.5vw), calc(var(--y) * -2.5vh));
+  transition: transform 0.7s cubic-bezier(0.215, 0.610, 0.355, 1);
+}
+
+page-home.animating section.hero img.forest {
+  transition: none;
 }
 
 @media (min-width: 800px) {
@@ -129,7 +139,7 @@ section.cta {
   position: absolute;
   transform: translateY(0);
   transition: all 250ms cubic-bezier(0.23, 1, 0.320, 1);
-  color: var(--color-success);
+  color: rgba(255, 255, 255, 0.8);
 }
 
 .prompt.copied .highlight {
