--- a/src/components/page-notfound/page-notfound.css
+++ b/src/components/page-notfound/page-notfound.css
@@ -8,6 +8,16 @@
     overflow: hidden;
 }
 
+.page.notfound {
+    opacity: 0;
+    animation: enterDown 200ms 250ms cubic-bezier(0.23, 1, 0.320, 1) forwards;
+}
+
+.notfound button {
+    opacity: 0;
+    animation: enterUp 250ms 450ms cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
+}
+
 .notfound h2 {
     font-size: 1.5em;
     font-family: var(--font-body);
@@ -26,4 +36,26 @@
 
 .notfound stencil-route-link {
     margin-top: 36px;
+}
+
+@keyframes enterDown {
+    from { 
+        opacity: 0;
+        transform: translateY(-64px);
+    }
+    to { 
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+@keyframes enterUp {
+    from { 
+        opacity: 0;
+        transform: translateY(32px);
+    }
+    to { 
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
