--- a/src/components/page-home/page-home.css
+++ b/src/components/page-home/page-home.css
@@ -172,14 +172,39 @@ section.benefits p {
   margin-left: 2em;
 }
 
+section.benefits smore-observer * {
+  transition: all 300ms 200ms cubic-bezier(0.23, 1, 0.320, 1);
+  opacity: 0;
+  transform: translateX(15vw);
+}
+section.benefits smore-observer:nth-of-type(even) * {
+  transform: translateX(-15vw);
+}
+section.benefits smore-observer.did-enter * {
+  opacity: 1;
+  transform: translateX(0);
+}
+
 @media (min-width: 640px) {
   section.benefits .container {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(3, 1fr);
   }
+  section.benefits smore-observer * {
+    transform: translateX(-15vw);
+  }
+  section.benefits smore-observer:nth-of-type(even) * {
+    transform: translateX(15vw);
+  }
+  section.benefits smore-observer.did-enter * {
+    transform: translateX(0);
+  }
 }
 
 @media (min-width: 1080px) {
+  section.benefits {
+    padding: 128px 12px;
+  }
   section.benefits .container {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
