--- a/src/components/page-docs/menu.css
+++ b/src/components/page-docs/menu.css
@@ -53,6 +53,10 @@
 
 @media (min-width: 640px) {
 
+    .docs nav ul {
+        padding: 0;
+    }
+
     .docs .submenu li a {
         color: rgba(0,0,0,0.54);
     }
