--- a/src/components/page-notfound/page-notfound.css
+++ b/src/components/page-notfound/page-notfound.css
@@ -20,7 +20,7 @@
 
 .notfound h2 {
     font-size: 1.5em;
-    font-family: var(--font-body);
+    font-family: var(--font-displayish);
     font-style: normal;
     font-weight: normal;
     margin: 0;
