--- a/src/global/app.css
+++ b/src/global/app.css
@@ -1,7 +1,10 @@
+@import "./fonts.css";
 @import "./variables.css";
 @import "./components/button.css";
+@import "./components/typography.css";
 
 body {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
   font-size: 16px;
@@ -15,20 +18,27 @@ body {
   background-color: var(--color-notify);
 }
 
-.hydrated {
-  display: block;
-}
-
 .page {
+    box-sizing: border-box;
     width: calc(100% - 24px);
-    max-width: 1080px;
+    max-width: 100vw;
     margin: 0 auto;
     padding: 64px 12px 128px;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2 {
   font-family: var(--font-display);
-  font-weight: 700;
+}
+
+h3, h4, h5, h6 {
+  font-family: var(--font-displayish);
+}
+
+article h3,
+article h4,
+article h5,
+article h6 {
+  padding-top: var(--scroll-padding, 0);
 }
 
 a {
