--- a/src/global/variables.css
+++ b/src/global/variables.css
@@ -1,9 +1,11 @@
 :root {
     --font-fallback: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    --font-display: 'Fira Mono', var(--font-fallback);
+    --font-display: 'Vulf Mono Black Italic', var(--font-fallback);
+    --font-displayish: 'Vulf Mono Regular', var(--font-fallback);
     --font-body: Roboto, var(--font-fallback);
     --font-code: 'Fira Mono', monospace;
 
+    --scroll-padding: 80px;
     
     --color-primary: #f49f23;
     --color-accent: #e8513c;
